# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "tc_tea"
version = "0.1.6"
authors = ["Jixun Wu <jixun.moe@gmail.com>"]
edition = "2021"

license = "MIT OR Apache-2.0"
keywords = ["tea", "tencent"]
readme = "README.md"
description = "Rusty implementation of Tencent's varient of TEA (tc_tea)."
repository = "https://github.com/jixunmoe/tc_tea_rust/"
categories = ["cryptography"]

[badges]
maintenance = { status = "as-is" }

[dependencies]
thiserror = "1.0.63"
rand = { version = "0.8.5" }
rand_chacha = { version = "0.3.1", optional = true }
rand_pcg = { version = "0.3.1", optional = true }
byteorder = "1.5.0"

[features]
default = ["rand_pcg"]
secure_random = ["rand/getrandom", "rand/rand_chacha", "rand_chacha"]
